centered correctly, but the font size is too big on smaller screens which needs fixing

--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,35 @@
+/* @media (min-width: 1250px) {
+  #individualNoteContainer {
+    min-width: 300px;
+    max-width: 300px;
+  }
+} */
+body {
+  margin: 0px;
+}
+
+input {
+  width: 30px;
+  height: 30px;
+}
+
+#spanningTheWholeViewWidthAndHeightWrapper {
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 #individualNoteContainer {
   border: 2px solid black;
   width: fit-content;
   padding: 2px;
-  transform-origin: 0 0;
-  transform: scale(2.3);
+  /* transform-origin: 0 0;
+  transform: scale(2.3); */
+
+  /* margin-left: auto;
+  margin-right: auto; */
+
 }
 
 textarea {
@@ -14,13 +40,13 @@ textarea {
   /* border: 2px solid red; */
 }
 
+textarea,button {
+  font-size: 32px;
+}
+
 textarea:focus-visible {
   outline: 0px;
   /* border-color : rgba(0,0,0,1); */
-}
-
-#addNewItemButton {
-  width: 100%;
 }
 
 .textAreaContainer {
@@ -36,6 +62,8 @@ textarea:focus-visible {
 
 .deleteButton {
   opacity: 0;
+  width: calc(20px*3.5); /*originally 20px */
+  height: calc(16px*3.5); /* originally 16px */
 }
 
 .textAreaContainer:focus-within .deleteButton {
